--- a/pruebaw2m/package.json
+++ b/pruebaw2m/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ngrx/effects": "^12.1.0",
     "@ngrx/store": "^12.1.0",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.6.0",
